--- a/AnExplorer-4.1.1/app/src/main/res/layout/activity_about.xml
+++ b/AnExplorer-4.1.1/app/src/main/res/layout/activity_about.xml
@@ -70,7 +70,7 @@
                     android:text="Rate us on Play store"
                     android:textAlignment="viewStart"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:textColor="@color/alertColor"
+                    android:textColor="@color/md_amber_200"
                     android:visibility="visible"
                     app:drawableStart="@drawable/ic_star" />
 
@@ -89,7 +89,7 @@
                     android:text="Show us more love"
                     android:textAlignment="viewStart"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:textColor="@color/alertColor"
+                    android:textColor="@color/md_amber_400"
                     android:visibility="visible"
                     app:drawableStart="@drawable/ic_support" />
 
@@ -127,7 +127,7 @@
                     android:text="Spread the word"
                     android:textAlignment="viewStart"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:textColor="@color/alertColor"
+                    android:textColor="@color/md_amber_600"
                     android:visibility="visible"
                     app:drawableStart="@drawable/ic_share" />
 
@@ -146,7 +146,7 @@
                     android:text="Feed us back"
                     android:textAlignment="viewStart"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:textColor="@color/alertColor"
+                    android:textColor="@color/md_amber_800"
                     android:visibility="visible"
                     app:drawableStart="@drawable/ic_feedback" />
 
