--- a/AnExplorer-4.1.1/app/src/free/res/layout/activity_purchase_content.xml
+++ b/AnExplorer-4.1.1/app/src/free/res/layout/activity_purchase_content.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/banner"
     android:orientation="vertical"
-    android:paddingBottom="8dp"
     android:paddingLeft="@dimen/card_padding"
-    android:paddingRight="@dimen/card_padding"
     android:paddingTop="8dp"
+    android:paddingRight="@dimen/card_padding"
+    android:paddingBottom="8dp"
+    android:rotation="0"
     android:weightSum="1">
 
     <androidx.cardview.widget.CardView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -33,9 +35,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingBottom="16dp"
                 android:paddingLeft="16dp"
-                android:paddingRight="16dp">
+                android:paddingRight="16dp"
+                android:paddingBottom="16dp">
 
                 <TextView
                     android:id="@+id/title"
@@ -43,8 +45,8 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif"
                     android:gravity="center_vertical"
-                    android:paddingBottom="16dp"
                     android:paddingTop="24dp"
+                    android:paddingBottom="16dp"
                     android:text="@string/app_pro"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
@@ -68,6 +70,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/restore" />
+
+                <Button
+                    android:id="@+id/button4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:backgroundTint=" #E799B0"
+                    android:fontFamily="serif-monospace"
+                    android:onClick="onGoNewView"
+                    android:text="Hello World!" />
 
                 <Button
                     android:id="@+id/purchase_button"
