--- a/AnExplorer-4.1.1/app/src/main/res/layout/activity_sample.xml
+++ b/AnExplorer-4.1.1/app/src/main/res/layout/activity_sample.xml
@@ -33,6 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="103dp"
                 android:drawableStart="@drawable/fab_ic_close"
+                android:onClick="sendMessage"
                 android:text="Go to About Interface" />
 
             <Button
@@ -40,6 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:drawableStart="@drawable/ic_action_done"
+                android:onClick="sendMessage2"
                 android:text="Go to Purchase Interface" />
 
         </LinearLayout>
