--- a/AnExplorer-4.1.1/app/src/main/res/layout/activity_about.xml
+++ b/AnExplorer-4.1.1/app/src/main/res/layout/activity_about.xml
@@ -127,7 +127,7 @@
                     android:text="Spread the word"
                     android:textAlignment="viewStart"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:textColor="@color/md_amber_600"
+                    android:textColor="@color/md_blue_200"
                     android:visibility="visible"
                     app:drawableStart="@drawable/ic_share" />
 
